fixed border alignment in cup-net

--- a/src/components/ftb-cup-net-explorer/ftb-cup-net-explorer-img-layer.component.scss
+++ b/src/components/ftb-cup-net-explorer/ftb-cup-net-explorer-img-layer.component.scss
@@ -1,6 +1,7 @@
 ftb-cup-net-explorer-img-layer {
   display: flex;
   align-items: center;
+  justify-content: center;
   overflow: hidden;
   cursor: grab;
   position: absolute;
